; ModuleID = '/home/carl/AnghaBench/curl/tests/libtest/extr_first.c_main.c'
source_filename = "/home/carl/AnghaBench/curl/tests/libtest/extr_first.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"Pass URL as argument please\0A\00", align 1
@test_argc = common dso_local global i32 0, align 4
@test_argv = common dso_local global i8** null, align 8
@libtest_arg2 = common dso_local global i8* null, align 8
@libtest_arg3 = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [9 x i8] c"URL: %s\0A\00", align 1
@LC_ALL = common dso_local global i32 0, align 4
@O_BINARY = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = call i32 (...) @memory_tracking_init()
  %9 = load i32, i32* %4, align 4
  %10 = icmp slt i32 %9, 2
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32, i32* @stderr, align 4
  %13 = call i32 (i32, i8*, ...) @fprintf(i32 %12, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %40

14:                                               ; preds = %2
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* @test_argc, align 4
  %16 = load i8**, i8*** %5, align 8
  store i8** %16, i8*** @test_argv, align 8
  %17 = load i32, i32* %4, align 4
  %18 = icmp sgt i32 %17, 2
  br i1 %18, label %19, label %23

19:                                               ; preds = %14
  %20 = load i8**, i8*** %5, align 8
  %21 = getelementptr inbounds i8*, i8** %20, i64 2
  %22 = load i8*, i8** %21, align 8
  store i8* %22, i8** @libtest_arg2, align 8
  br label %23

23:                                               ; preds = %19, %14
  %24 = load i32, i32* %4, align 4
  %25 = icmp sgt i32 %24, 3
  br i1 %25, label %26, label %30

26:                                               ; preds = %23
  %27 = load i8**, i8*** %5, align 8
  %28 = getelementptr inbounds i8*, i8** %27, i64 3
  %29 = load i8*, i8** %28, align 8
  store i8* %29, i8** @libtest_arg3, align 8
  br label %30

30:                                               ; preds = %26, %23
  %31 = load i8**, i8*** %5, align 8
  %32 = getelementptr inbounds i8*, i8** %31, i64 1
  %33 = load i8*, i8** %32, align 8
  store i8* %33, i8** %6, align 8
  %34 = load i32, i32* @stderr, align 4
  %35 = load i8*, i8** %6, align 8
  %36 = call i32 (i32, i8*, ...) @fprintf(i32 %34, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* %35)
  %37 = load i8*, i8** %6, align 8
  %38 = call i32 @test(i8* %37)
  store i32 %38, i32* %7, align 4
  %39 = load i32, i32* %7, align 4
  store i32 %39, i32* %3, align 4
  br label %40

40:                                               ; preds = %30, %11
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32 @memory_tracking_init(...) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32 @test(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
